# Waveshare-ESP32-S3-Touch-LCD-4.3B_playground

./: .gitignore  README.md
lvgl_Porting_five_pic/: partitions.csv  sdkconfig  sdkconfig.old  sdkconfig_backup_v1
lvgl_Porting_five_pic/main/: CMakeLists.txt  rgb_lcd_example_main.c
lvgl_Porting_five_pic/main/export/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
lvgl_Porting_five_pic/main/export/components/: ui_comp_hook.c
lvgl_Porting_five_pic/main/export/images/: ui_img_pic001_png.c  ui_img_pic002_png.c  ui_img_pic003_png.c  ui_img_pic004_png.c  ui_img_pic005_png.c
lvgl_Porting_five_pic/main/export/screens/: ui_Screen1.c
